--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 grid-gap: 10px;
 padding: 20px;
-max-width: 360px;
+width: 360px;
 background-color: #FF6666;
 border-radius: 15px;
 position: absolute;
