--- a/style.css
+++ b/style.css
@@ -10,15 +10,14 @@ body{
 }
 
 .calculator{
+max-width: 360px;
+margin: 50px auto;
 display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 grid-gap: 10px;
 padding: 20px;
-width: 360px;
 background-color: #FF6666;
 border-radius: 15px;
-position: absolute;
-margin: 50px auto;
 user-select: none;
 box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
